per/app2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-demo-v2
  namespace: nelly-v1
  labels:
    app: spring-demo2
spec:
  replicas: 2
  selector:
    matchLabels:
      app: spring-demo2
  template:
    metadata:
      name: spring-demo2
      labels:
        app: spring-demo2
    spec:
      containers:
        - name: spring-demo2-db
          image: postgres:alpine
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5432
              protocol: TCP
        - name: spring-demo2
          image: nellyssenkumba/demo-spring-app:1.0.0-beta-no-db
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 7100
              protocol: TCP
      restartPolicy: Always

---
apiVersion: v1
kind: Service
metadata:
  name: spring-demo2
  namespace: nelly-v1
spec:
  selector:
    app: spring-demo2
  ports:
    - protocol: TCP
      port: 7101
      targetPort: 7100
